# ChangeLog for dev-python/mwlib-ext
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/mwlib-ext/ChangeLog,v 1.2 2010/07/09 23:28:34 arfrever Exp $

*mwlib-ext-0.12.3 (09 Jul 2010)

  09 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -mwlib-ext-0.9.3.ebuild, +mwlib-ext-0.12.3.ebuild:
  Version bump (bug #294168). Set SUPPORT_PYTHON_ABIS.

*mwlib-ext-0.9.3 (18 Apr 2009)

  18 Apr 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +mwlib-ext-0.9.3.ebuild:
  Initial import. Ebuild by Richard Ash, fixes #266166
