@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/mwlib-ext
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/mwlib-ext/ChangeLog,v 1.2 2010/07/09 23:28:34 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/mwlib-ext/ChangeLog,v 1.3 2011/12/25 11:21:06 patrick Exp $
+
+*mwlib-ext-0.12.4 (25 Dec 2011)
+
+  25 Dec 2011; Patrick Lauer <patrick@gentoo.org> +mwlib-ext-0.12.4.ebuild:
+  Bump for #393597
 
 *mwlib-ext-0.12.3 (09 Jul 2010)
 
